# seg

./: README.md  README.rst  environment.yml  requirements.txt  setup.cfg  setup.py
seg/: augment.py  dataset.py  degrade.py  main.py  model.py  postprocess.py  requirements.txt
